--- a/src/main.css
+++ b/src/main.css
@@ -9,3 +9,10 @@ label {
     color: #000000;
     cursor: pointer;
 }
+
+.container {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 65%;
+    height: 80px;
+}
