--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 250px;
+    width: 150px;
     height: 70px;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .sidebar {
-    width: 250px;
+    width: 20%;
     height: 100%;
     background-color: #2a3042;
     position: fixed;
